--- a/index.HTML
+++ b/index.HTML
@@ -75,6 +75,10 @@
 <div class="row pt-4">
     <div id="wrap">
         <div class="sidebar">
+
+
+
+            <p>tst</p>
             <ul class="list-group list-group-flush ps-0">
                 <a href="index.HTML" class="list-group-item list-group-item-action">
                     <i class="fa-solid fa-house me-2 purple"></i>الصفحة الرئيسية
@@ -98,6 +102,7 @@
                 <a href="index.HTML" class="list-group-item list-group-item-action">
                     <i class="fa-solid fa-music me-2 purple"></i> موسيقى
                 </a>
+                
                 <a href="index.HTML" class="list-group-item list-group-item-action">
                     <i class="fa-solid fa-circle-play me-2 purple"></i> الاشتراكات
                 </a>
